--- a/TranspoLink/Views/Admin/ModifyAdmin.cshtml
+++ b/TranspoLink/Views/Admin/ModifyAdmin.cshtml
@@ -14,7 +14,8 @@
     <script src="/js/admin.js" asp-append-version="true" defer></script>
 }
 
-<div class="admin-edit-bg">
+@* Used admin-bg-page instead of admin-edit-bg for consistency *@
+<div class="admin-container admin-bg-page" style="display:flex; justify-content:center; align-items:center;">
 
     <div class="admin-glass-card landscape-mode">
 
